Avoid cut off New project modal

--- a/app/assets/stylesheets/controllers/company/base.sass
+++ b/app/assets/stylesheets/controllers/company/base.sass
@@ -30,3 +30,7 @@
   border-radius: 2px
   &--invoice
     border: none
+
+.wrap-company
+  .modal
+    margin-top: 60px
